--- a/frontend/src/app/landing/components/banner/banner.component.scss
+++ b/frontend/src/app/landing/components/banner/banner.component.scss
@@ -3,8 +3,7 @@
 .banner {
 	&__wrapper {
 		width: 100%;
-		background: url('src/assets/images/landing/banner.webp') center/cover
-			no-repeat;
+		background: url('src/assets/images/landing/banner.webp') center/cover no-repeat;
 		padding: 2rem;
 		border-radius: 2rem;
 		display: flex;
