--- a/frontend/src/app/landing/components/features/features.component.html
+++ b/frontend/src/app/landing/components/features/features.component.html
@@ -10,8 +10,7 @@
 				<div class="features__item-icon"></div>
 				<h3 class="features__item-title">Chatting</h3>
 				<p class="features__item-body">
-					Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-					eiusmod tempor.
+					Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.
 				</p>
 			</div>
 		}
