--- a/frontend/src/app/landing/components/navbar/navbar.component.html
+++ b/frontend/src/app/landing/components/navbar/navbar.component.html
@@ -58,9 +58,7 @@
 							alt="Avatar"
 							class="avatar-img"
 						/>
-						<p class="avatar-label">
-							{{ user.firstname }} {{ user.lastname.charAt(0) }}.
-						</p>
+						<p class="avatar-label">{{ user.firstname }} {{ user.lastname.charAt(0) }}.</p>
 					</div>
 				</button>
 				<mat-menu
