--- a/frontend/src/app/landing/components/teams/teams.component.html
+++ b/frontend/src/app/landing/components/teams/teams.component.html
@@ -14,8 +14,8 @@
 				<div class="teams__main-details-item-text">
 					<h4 class="teams__main-details-item-text-title">Visualize & Plan</h4>
 					<p class="teams__main-details-item-text-body">
-						Manage any project from start to finish with highly customizable
-						views that make project planning a breeze.
+						Manage any project from start to finish with highly customizable views that make project
+						planning a breeze.
 					</p>
 				</div>
 			</div>
@@ -25,8 +25,8 @@
 				<div class="teams__main-details-item-text">
 					<h4 class="teams__main-details-item-text-title">Visualize & Plan</h4>
 					<p class="teams__main-details-item-text-body">
-						Manage any project from start to finish with highly customizable
-						views that make project planning a breeze.
+						Manage any project from start to finish with highly customizable views that make project
+						planning a breeze.
 					</p>
 				</div>
 			</div>
@@ -36,8 +36,8 @@
 				<div class="teams__main-details-item-text">
 					<h4 class="teams__main-details-item-text-title">Visualize & Plan</h4>
 					<p class="teams__main-details-item-text-body">
-						Manage any project from start to finish with highly customizable
-						views that make project planning a breeze.
+						Manage any project from start to finish with highly customizable views that make project
+						planning a breeze.
 					</p>
 				</div>
 			</div>
