--- a/frontend/src/app/shared/layouts/primary-layout/components/navbar/navbar.component.html
+++ b/frontend/src/app/shared/layouts/primary-layout/components/navbar/navbar.component.html
@@ -51,9 +51,7 @@
 						alt="Avatar"
 						class="navbar__avatar-img"
 					/>
-					<p class="navbar__avatar-label">
-						{{ user.firstname }} {{ user.lastname.charAt(0) }}.
-					</p>
+					<p class="navbar__avatar-label">{{ user.firstname }} {{ user.lastname.charAt(0) }}.</p>
 				</div>
 			</button>
 			<mat-menu
