--- a/frontend/src/app/shared/ui/icon/icon.component.html
+++ b/frontend/src/app/shared/ui/icon/icon.component.html
@@ -1,7 +1,5 @@
 <div [ngStyle]="{ width: sizeInPx, height: sizeInPx }">
-	<mat-icon
-		[ngStyle]="{ 'font-size': sizeInPx, width: sizeInPx, height: sizeInPx }"
-	>
+	<mat-icon [ngStyle]="{ 'font-size': sizeInPx, width: sizeInPx, height: sizeInPx }">
 		{{ icon }}
 	</mat-icon>
 </div>
