--- a/frontend/src/app/teams/submodules/chats/components/chat-room/chat-room.component.html
+++ b/frontend/src/app/teams/submodules/chats/components/chat-room/chat-room.component.html
@@ -14,9 +14,7 @@
 					<div class="chats__navbar-header">
 						<h3 class="chats__navbar-name">{{ selectedChat.name }}</h3>
 						@if (selectedChat.type === 'GROUP') {
-							<p class="chats__navbar-details">
-								{{ selectedChat.size }} Members
-							</p>
+							<p class="chats__navbar-details">{{ selectedChat.size }} Members</p>
 						}
 					</div>
 				</div>
