--- a/frontend/src/app/teams/submodules/dashboard/components/dashboard-sidebar/dashboard-sidebar.component.html
+++ b/frontend/src/app/teams/submodules/dashboard/components/dashboard-sidebar/dashboard-sidebar.component.html
@@ -59,9 +59,7 @@
 		<h4 class="dashboard__sidebar-title">Upcoming Events</h4>
 		<div class="dashboard__sidebar-events">
 			<div class="dashboard__sidebar-events-item">
-				<p class="dashboard__sidebar-events-item-title">
-					Standup with QazaqRepublic
-				</p>
+				<p class="dashboard__sidebar-events-item-title">Standup with QazaqRepublic</p>
 				<p class="dashboard__sidebar-events-item-date">Today at 11:00</p>
 			</div>
 			<div class="dashboard__sidebar-events-item">
