--- a/frontend/src/app/teams/submodules/dashboard/components/views/dashboard-cards-view/dashboard-cards-view.component.html
+++ b/frontend/src/app/teams/submodules/dashboard/components/views/dashboard-cards-view/dashboard-cards-view.component.html
@@ -8,9 +8,7 @@
 					loading="lazy"
 					class="dashboard-card__item-img"
 				/>
-				<h3 class="dashboard-card__item-title">
-					{{ member.firstname }} {{ member.lastname }}
-				</h3>
+				<h3 class="dashboard-card__item-title">{{ member.firstname }} {{ member.lastname }}</h3>
 				<span class="dashboard-card__item-desc">
 					{{ member.position }}
 				</span>
