--- a/frontend/src/app/overview/pages/overview-home/overview-home.component.html
+++ b/frontend/src/app/overview/pages/overview-home/overview-home.component.html
@@ -127,8 +127,7 @@
 						<p class="overview__messages-item-date">5m ago</p>
 					</div>
 					<p class="overview__messages-item-message">
-						Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloremque
-						delectus
+						Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloremque delectus
 					</p>
 				</div>
 
@@ -138,8 +137,7 @@
 						<p class="overview__messages-item-date">5m ago</p>
 					</div>
 					<p class="overview__messages-item-message">
-						Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloremque
-						delectus
+						Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloremque delectus
 					</p>
 				</div>
 
@@ -149,8 +147,7 @@
 						<p class="overview__messages-item-date">5m ago</p>
 					</div>
 					<p class="overview__messages-item-message">
-						Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloremque
-						delectus
+						Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloremque delectus
 					</p>
 				</div>
 			</div>
@@ -161,8 +158,7 @@
 			<div class="overview__events-list">
 				<div class="overview__events-item">
 					<p class="overview__events-item-title">
-						Standup with QazaqRepublicStandup with QazaqRepublicStandup with
-						QazaqRepublic
+						Standup with QazaqRepublicStandup with QazaqRepublicStandup with QazaqRepublic
 					</p>
 					<p class="overview__events-item-date">Today at 11:00</p>
 				</div>
