--- a/frontend/src/app/teams/submodules/posts/pages/posts/posts.component.scss
+++ b/frontend/src/app/teams/submodules/posts/pages/posts/posts.component.scss
@@ -62,4 +62,59 @@
 			display: block;
 		}
 	}
+
+	&__loading-page {
+		display: grid;
+		grid-template-rows: none;
+		overflow-x: auto;
+	}
+}
+
+.posts__error {
+	position: relative;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	height: 100%;
+
+	&-content {
+		z-index: 10;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+	}
+
+	&-title {
+		color: #d8d7d7;
+		font-size: 280px;
+		font-weight: 600;
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		transform: translate(-50%, -50%);
+		z-index: 5;
+		opacity: 0.25;
+
+		@media screen and (max-width: $md) {
+			font-size: 180px;
+		}
+	}
+
+	&-subtitle {
+		color: #000;
+		font-size: 26px;
+		margin-bottom: 26px;
+		text-align: center;
+		line-height: 1.4;
+
+		@media screen and (max-width: $md) {
+			font-size: 20px;
+		}
+	}
+}
+
+.likedPosts__loading-element {
+	z-index: 10;
+	display: flex;
+	flex-direction: column;
 }
