--- a/frontend/src/app/teams/submodules/tasks/pages/tasks-list/tasks-list.component.html
+++ b/frontend/src/app/teams/submodules/tasks/pages/tasks-list/tasks-list.component.html
@@ -20,11 +20,49 @@
 			}
 
 			@if (columns.loading) {
-				<div>Loading</div>
+				<div class="tasks__loading-page">
+					<div
+						class="tasks__loading-column"
+						*ngFor="let i of [0, 1, 2, 3, 4]"
+					>
+						<ngx-skeleton-loader
+							count="1"
+							appearance="line"
+							[theme]="{
+								height: '50px',
+								'border-radius': '8px'
+							}"
+						/>
+
+						<ngx-skeleton-loader
+							count="1"
+							appearance="line"
+							[theme]="{
+								height: '210px',
+								'border-radius': '8px'
+							}"
+						/>
+					</div>
+				</div>
 			}
 
 			@if (columns.error) {
-				<div>Error</div>
+				<div class="tasks__error page">
+					<h1 class="tasks__error-title">404</h1>
+					<div class="tasks__error-content">
+						<h2 class="tasks__error-subtitle">
+							Oops.. <br />
+							We couldn't find a tasks list you are looking for.
+						</h2>
+						<button
+							mat-flat-button
+							color="primary"
+							routerLink="/hub/overview"
+						>
+							<a routerLink="/hub/overview">Return Back</a>
+						</button>
+					</div>
+				</div>
 			}
 		}
 	</div>
