feature: redesigned teams dashboard, added analytics (#51)

--- a/frontend/src/app/shared/layouts/primary-layout/primary-layout.component.scss
+++ b/frontend/src/app/shared/layouts/primary-layout/primary-layout.component.scss
@@ -9,7 +9,7 @@
 	font-size: $text-sm;
 	color: $text-black;
 	line-height: 24px;
-	background: #fff;
+	background: #f9fafc;
 	position: relative;
 }
 
