--- a/frontend/src/assets/styles/_vars.scss
+++ b/frontend/src/assets/styles/_vars.scss
@@ -25,11 +25,12 @@ $background-sidebar: #1b1b1b;
 $background-light: rgb(248, 249, 250);
 $background-navbar: #1b1b1b;
 $border-color: #e6eeea;
-$border-color-dark: #c5ceca;
+$border-color-dark: #cacccb;
 $background-active: #0d0e10;
 $background-active-light: #f0f4f8;
 
 $text-white: #f4f5f5;
+$text-light: #b4b8be;
 $text-black: #242424;
 
 $kaiteki-primary-palette: (
