--- a/frontend/src/app/teams/components/navbar/navbar.component.scss
+++ b/frontend/src/app/teams/components/navbar/navbar.component.scss
@@ -33,10 +33,11 @@
 		display: flex;
 		align-items: center;
 		z-index: 2;
-		padding: 12px 24px 0;
+		padding: 12px 24px 8px;
 		gap: 12px;
 		overflow: auto;
 		background-color: #fff;
+		border-bottom: 1px solid #eef3f0;
 
 		@media screen and (max-width: $sm) {
 			padding: 12px 12px 0;
