--- a/frontend/src/app/teams/submodules/files/pages/files-list/files-list.component.html
+++ b/frontend/src/app/teams/submodules/files/pages/files-list/files-list.component.html
@@ -24,18 +24,20 @@
 
 			@if (files.loading) {
 				<div class="files__loading">
-					<div class="files__loading-element" 
-					*ngFor="let i of [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]"
+					@for(skeleton of skeletonArray; track $index){
+					<div
+						class="files__loading-element"
 					>
 						<ngx-skeleton-loader
 							count="1"
 							appearance="line"
 							[theme]="{
 								height: '260px',
-								'border-radius': '8px',
+								'border-radius': '8px'
 							}"
 						/>
 					</div>
+				}
 				</div>
 			}
 
