--- a/frontend/src/app/teams/submodules/meetings/pages/meetings/meetings.component.html
+++ b/frontend/src/app/teams/submodules/meetings/pages/meetings/meetings.component.html
@@ -22,9 +22,9 @@
 
 			@if (meetings.loading) {
 				<div class="meetings__loading">
+					@for(skeleton of skeletonArray; track $index){
 					<div
 						class="loading-element"
-						*ngFor="let i of [0, 1, 2, 3,4,5,6,7,8,9]"
 					>
 						<ngx-skeleton-loader
 							count="1"
@@ -35,6 +35,7 @@
 							}"
 						/>
 					</div>
+				}
 				</div>
 			}
 
